<resources>
    <string name="app_name">La Posada</string>
    <string name="la_posada_title">LA POSADA</string>
    <string name="loginText">Iniciar Sesión</string>
    <string name="registerText">Registrarse</string>
    <string name="LaPosadaLogo_contentDescription">El logo de la aplicación La Posada</string>

    <string name="mailHint">Ingresa tu correo electrónico</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="passwordHint">Ingrese su contraseña</string>
    <string name="confirmPassword">Confimar Contraseña</string>
    <string name="confirmPasswordHInt">Repita su contraseña</string>
    <string name="sendText">Enviar</string>
    <string name="passwordError">La contraseña no coincide</string>
    <string name="tables_title">MESAS</string>
    <string name="reservas_title">RESERVAS</string>
    <string name="food_title">COMIDA</string>
    <string name="games_title">JUEGOS</string>
    <string name="logout_title">Cerrar Sesion</string>
    <string name="priceTitle">Precio</string>
    <string name="tiposTitle">Tipos</string>
    
    <string name="DeleteOptionFoodTitle">Seleccione comida a eliminar</string>
    <string name="DeleteOptionGameTitle">Seleccione juego a eliminar</string>
    
    <string name="add_game_title">Añadir juego</string>
    <string name="edit_game_title">Editar juego</string>
    <string name="delete_game_title">Eliminar juego</string>
    
    <string name="select_image">Seleccionar imagen</string>
    <string name="label_name">Nombre</string>
    <string name="hint_name">Ingrese el nombre</string>
    <string name="select_types">Seleccione los tipos</string>
    <string name="label_description">Descripcion</string>
    <string name="hint_description">Ingrese una descripcion</string>
    
    <string name="button_add">Añadir</string>
    <string name="button_save">Guardar</string>
    <string name="button_delete">Eliminar</string>
    
    <string name="error_empty_fields">Por favor complete todos los campos</string>
    <string name="game_added_success">Juego añadido correctamente</string>
    <string name="game_deleted_success">Juego eliminado</string>
    <string name="no_games_found">No hay juegos</string>

    <string name="back_button" />
    <string name="Map_button">map_Button</string>
    <string name="Ver_mapa">Ver mapa</string>
    <string name="mesa_1">Mesa #1</string>
    <string name="selectTypesSubT">Seleccione los tipos</string>
    <string name="saveButtonText">Guardar</string>
    <string name="InputNameLabel">Ingrese el nombre</string>
    <string name="descriptionTitle">Descripcion</string>

</resources>