<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_activity"
    android:background="@drawable/fondo_default"
    >


    <LinearLayout
        android:id="@+id/layout_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <Button
            android:id="@+id/button_backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_superior"
        app:layout_constraintVertical_bias="0.15"
        />


    <TextView
        android:id="@+id/textView_loginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_registerTitle"
        app:layout_constraintStart_toStartOf="@id/editText_loginMail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editText_loginMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:hint="@string/mailHint"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textView_loginUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/orange"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray_500"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView_passwordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_loginMail"
        app:layout_constraintStart_toStartOf="@id/editText_passwordUser"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editText_passwordUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:hint="@string/passwordHint"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textView_passwordUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/orange"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_500"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView_confirmPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_passwordUser"
        app:layout_constraintStart_toStartOf="@id/editText_passwordUser"
        android:layout_marginTop="20dp"
        android:text="@string/confirmPassword"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editText_confirmPasswordUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:hint="@string/confirmPasswordHInt"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textView_confirmPasswordUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/orange"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_500"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView_errorPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_confirmPasswordUser"
        app:layout_constraintStart_toStartOf="@id/editText_confirmPasswordUser"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="@color/blue"
        android:text="@string/passwordError"
        android:textSize="20sp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendText"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/editText_confirmPasswordUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="serif"
        />

</androidx.constraintlayout.widget.ConstraintLayout>