<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_default"
    tools:context=".pantallas.menuJuegos.EditGameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_blue"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/circle_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar juego"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">
            <TextView
                android:id="@+id/labelSeleccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar juego"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                />
            <Spinner
                android:id="@+id/spinnerJuego"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_marginHorizontal="32dp"
                />
            <TextView
                android:id="@+id/labelImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar imagen"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                />
            <LinearLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                >

                <View
                    android:id="@+id/imagePlaceHolder1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/gray_500" />

                <View
                    android:id="@+id/imagePlaceHolder2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@color/gray_500" />
            </LinearLayout>
            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                />
            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="32dp"
                android:background="@color/gray_500"
                android:padding="10dp"
                android:hint="@string/InputNameLabel"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:inputType="text"
                android:maxLength="12"
                />
            <TextView
                android:id="@+id/labelType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccione los tipos"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toBottomOf="@id/inputName"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/Type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/gray_500"
                android:text="@string/selectTypesSubT"
                app:layout_constraintTop_toBottomOf="@id/labelType"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toBottomOf="@id/Type"
                app:layout_constraintStart_toStartOf="parent" />
            <EditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="32dp"
                android:background="@color/gray_500"
                android:hint="@string/hint_description"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="start|top"
                app:layout_constraintTop_toBottomOf="@id/labelDescription" />
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/saveButtonText"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                app:cornerRadius="25dp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>